[metadata]
name = tintervals
version = 0.1.0
author = Marco Pizzocaro
author_email = m.pizzocaro@inrim.it
description = A collection of functions and tools to work with time intervals and to convert time data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.ininrim.it/m.pizzocaro/tintervals.git
#project_urls =
#    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    ciso8601
    pandas
    pyyaml

[options.packages.find]
where = src
