[metadata]
name = tintervals
version = 0.1.4
author = Marco Pizzocaro
author_email = m.pizzocaro@inrim.it
description = A collection of tools to work with time intervals and to convert time data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/INRIM/tintervals
project_urls = 
    Documentation = https://tintervals.readthedocs.io
    Source = https://github.com/INRIM/tintervals
    Acknowledgement = http://empir.npl.co.uk/rocit/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    ciso8601
    pandas
    pyyaml


[options.packages.find]
where = src


[options.extras_require]
docs =
    sphinx==4.4.0
    sphinx-rtd-theme
    myst-parser
    autodocsumm
